# shiftpod

./: .gitignore  README.md  Taskfile.yml  devenv.nix  go.mod  go.sum  test-integration.sh
.task/checksum/: proto-gen
cmd/shim/: main.go
internal/: constants.go  logger.go
internal/shim/: config.go  container.go  manager.go  manager_client.go  plugin.go  shiftpod_service.go  ttrpc.go  utils.go
k3s/: Dockerfile.k3s-criu  config.toml.tmpl  criu.conf  k3s-criu.Dockerfile  runtimeclass.yaml  testpod.yaml  update_shiftpod.sh
k3s/counter/: Dockerfile.counter  counter.c  counter.yaml  deployment.yaml
k3s/manager/: Dockerfile  README.md  configmap.yaml  crd.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml
manager/: Cargo.toml  Dockerfile  build.rs
manager/proto/: manager.proto
manager/src/: config.rs  crd.rs  main.rs  manager.rs
proto/: manager.pb.go  manager.proto  manager_grpc.pb.go
